# NumC

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  README.md
benchmarks/: CMakeLists.txt  main.cpp
examples/: CmakeLists.txt  complex.cpp  dane_lab4.txt  example_autodiff.cpp  example_dataframe.cpp  example_polynomial.cpp  example_random.cpp  example_sparse.cpp  functions.cpp  numerical_methods.cpp  plots.cpp  root_lab1.cpp  root_lab10.cpp  root_lab11.cpp  root_lab12.cpp  root_lab2.cpp  root_lab3.cpp  root_lab4.cpp  root_lab5.cpp  root_lab6.cpp  root_lab7.cpp  root_lab8.cpp  root_lab9.cpp  roots.cpp  showcase.cpp  tensors.cpp  vectors.cpp
projects/: CMakeLists.txt  project_analysis.cpp  project_common.cpp  project_diff_eq.cpp  project_geometry.cpp  project_graphs.cpp  project_linear_algebra.cpp  project_number_theory.cpp  project_optimalization.cpp  project_statistics.cpp
src/: CmakeLists.txt  convenience.hpp  inc.hpp  include.hpp  numc  numc.h
src/analysis/: calculus.hpp  differentiation.hpp  fft.hpp  integration.hpp  interpolation.hpp
src/common/: autodiff.hpp  common.hpp  complex.cpp  complex.hpp  constants.hpp  dataframe.hpp  function.hpp  polynomial.hpp  sparse.hpp  tensor.hpp  vector.cpp  vector.hpp
src/differential_equations/: bvp.hpp  ode.hpp  pde.hpp
src/geometry/: curves.hpp  spatial.hpp
src/graphs/: mst.hpp  pathfinding.hpp
src/linear_algebra/: eigen.hpp  matrix_ops.hpp  solvers.hpp
src/machine_learning/: clustering.hpp  decision_tree.hpp  decomposition.hpp  knn.hpp  neural_network.hpp
src/utility/: log.cpp  (+2 more)
tests/: CmakeLists.txt
(+29 files in other folders)
